# cmake

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cc  make_helper.sh
app/: CMakeLists.txt  main.cc
appcfg/: CMakeLists.txt  config.hpp.in
cmake/: AddGitSubmodule.cmake
inc/: my_lib.h
src/my_lib/: CMakeLists.txt  my_lib.cc
tests/: CMakeLists.txt  main_ut.cc
